--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "nodemailer": "^6.4.16",
     "nodemailer-mailgun-transport": "^2.0.2",
     "pug": "^3.0.0",
+    "react-table": "^7.6.3",
     "redis": "^3.0.2",
     "startbootstrap-sb-admin-2": "^4.1.3",
     "swagger-jsdoc": "^6.0.1",
