--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.10",
     "morgan": "~1.10.0",
     "ms": "^2.1.2",
@@ -72,6 +73,7 @@
     "pug": "^3.0.0",
     "react-table": "^7.6.3",
     "redis": "^3.0.2",
+    "socket.io": "^4.0.0",
     "startbootstrap-sb-admin-2": "^4.1.3",
     "swagger-jsdoc": "^6.0.1",
     "swagger-ui-express": "^4.1.5",
