feat: adding test for authentication

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "deploy:production": "npm run build:babel && pm2 reload your_app_pm2",
     "mongo:restore": "mongorestore dump/",
     "mongo:dump": "mongodump --db=${db} --out dump/",
-    "test": "jest --detectOpenHandles",
+    "test": "jest --detectOpenHandles --coverage",
     "test:watch": "jest --detectOpenHandles --watch",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease",
