fix: fixing example

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,13 @@ MONGODB_USERNAME=
 MONGODB_PASSWORD=
 MONGODB_DATABASE=example
 
+MONGODB_HOST_TEST=127.0.0.1
+MONGODB_PORT_TEST=27017
+MONGODB_AUTH_TEST=admin
+MONGODB_USERNAME_TEST=
+MONGODB_PASSWORD_TEST=
+MONGODB_DATABASE_TEST=example
+
 MAIL_DRIVER=
 MAIL_HOST=
 MAIL_PORT=
