--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
   "license": "MIT",
   "dependencies": {
     "@types/express-handlebars": "^3.1.0",
+    "@types/faker": "^5.5.3",
     "@types/handlebars": "^4.1.0",
+    "@types/sinon": "^10.0.0",
     "@types/twilio": "^2.11.0",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
@@ -56,6 +58,7 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-handlebars": "^5.2.0",
+    "faker": "^5.5.3",
     "googleapis": "^66.0.0",
     "handlebars": "^4.7.6",
     "hbs": "^4.1.1",
@@ -73,6 +76,7 @@
     "pug": "^3.0.0",
     "react-table": "^7.6.3",
     "redis": "^3.0.2",
+    "sinon": "^10.0.0",
     "socket.io": "^4.0.0",
     "startbootstrap-sb-admin-2": "^4.1.3",
     "swagger-jsdoc": "^6.0.1",
