feat: testing mock

--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "echo 'Pre-commit checks...'",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-push": "npm run lint"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "author": "masb0ymas",
