--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
+    "mongoosastic": "^4.6.0",
     "mongoose": "^5.11.10",
     "morgan": "~1.10.0",
     "ms": "^2.1.2",
